# vellum

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  DESIGN.md  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  PERFORMANCE.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  extra.css  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: api.R  datashade.R  debug.R  device.R  extendr-wrappers.R  gpar.R  grob.R  paint.R  scene-model.R  scene.R  spread.R  style.R  text.R  unit.R  vellum-package.R  viewport.R  zzz.R
articles/: coming-from-grid.html  coming-from-grid.md  datashading.html  datashading.md  grid-interop.html  grid-interop.md  index.html  index.md  retained-mode.html  retained-mode.md  scene-and-paint.html  scene-and-paint.md  scene-contract.html  scene-contract.md  vellum.html  vellum.md
docs/: 404.html  LICENSE-text.html  LICENSE-text.md  LICENSE.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
man/: Scene.Rd  arrow.Rd  as_mask.Rd  as_vellum.Rd  as_vellum_scene.Rd  datashade.Rd  datashade_lines.Rd  describe.Rd  display.Rd  dynspread.Rd  gpar.Rd  gradients.Rd  grob.Rd  grobwidth.Rd  hit_test.Rd  md.Rd  node_names.Rd  pattern.Rd  rs_backend_info.Rd  rs_bbox.Rd  rs_circle.Rd  rs_clear_glyph_cache.Rd  rs_clear_subraster_cache.Rd  rs_glyph_sprite_stats.Rd  rs_gpar.Rd  (+32 more)
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: aggregate.rs  cache.rs  color.rs  font.rs  lib.rs  oklab.rs  render.rs  scene.rs  sketch.rs  units.rs
(+285 files in other folders)
