[package]
name = 'rsplot'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'rsplot'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9'
tiny-skia = '0.11'
skrifa = '0.31'

[profile.release]
lto = true
codegen-units = 1
