[package]
name = 'vellum'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.92'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'vellum'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9'
tiny-skia = '0.11'
skrifa = '0.31'
krilla = { version = '=0.8.2', default-features = false, features = ['raster-images'] }
base64 = '0.22.1'

[profile.release]
lto = true
codegen-units = 1
